<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/are_you_sure"
        android:textStyle="bold"
        android:textColor="#ff000000"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/back_press"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">
        <Button
            android:id="@+id/yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/buttonColor"
            android:text="@string/yes"/>
        <Button
            android:id="@+id/no"
            android:layout_width="0dp"
            android:layout_margin="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/buttonColor"
            android:text="@string/no"/>
    </LinearLayout>

</LinearLayout>