<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bmi">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bmiToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/buttonColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/unitRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/radio_group_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bmiToolbar">

        <RadioButton
            android:id="@+id/metricUnit"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/metric"
            android:textColor="@drawable/selected_drawable_color"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/usUnit"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/united_states"
            android:textColor="@drawable/selected_drawable_color"
            android:textStyle="bold" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/metricLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unitRadioGroup"
        app:layout_constraintVertical_bias="0.034">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedWeightTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weightEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="193dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedHeightTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_height"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/heightEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="193dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center" />

        <Button
            android:id="@+id/calculateBmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/buttonColor"
            android:text="@string/calculate"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/usUnitLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unitRadioGroup"
        app:layout_constraintVertical_bias="0.034">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedUsWeightTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_weight_lbs"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usWeightEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="193dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedUsFeetTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/label_height_feet"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usFeetEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="193dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedUsHeightTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/label_height_inch"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usHeightEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="193dp" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/usResultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center" />

        <Button
            android:id="@+id/usCalculateBmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/buttonColor"
            android:text="@string/calculate"
            android:textColor="@android:color/white" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>