<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Workout">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/buttonColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/ButtonContainerLinearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewExercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_ready_for_exercise"
            android:textColor="@color/buttonColor"
            android:textSize="@dimen/textSize"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_value">

            <ProgressBar
                android:id="@+id/starterProgressBar"
                style="?android:progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/circular_progress_bar_gray"
                android:indeterminate="false"
                android:max="15"
                android:progress="15"
                android:progressDrawable="@drawable/progress_bar"
                android:rotation="-90" />

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/startup_button_background"
                android:gravity="center">

                <TextView
                    android:id="@+id/countDownTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ten"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/upComingExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/first_exercise"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/exerciseContainerLinearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewExercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/exerciseImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/exercise_image" />

        <TextView
            android:id="@+id/exerciseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exerciseName"
            android:textColor="@color/buttonColor"
            android:textSize="25sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/round_value">

            <ProgressBar
                android:id="@+id/exerciseProgressBar"
                style="?android:progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/circular_progress_bar_gray"
                android:indeterminate="false"
                android:max="60"
                android:progress="100"
                android:progressDrawable="@drawable/progress_bar"
                android:rotation="-90" />

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/startup_button_background"
                android:gravity="center">

                <TextView
                    android:id="@+id/exerciseCountDownTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thirty"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/textSize"
                    android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ButtonContainerLinearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>